from __future__ import annotations

from datetime import datetime
from typing import TYPE_CHECKING
from uuid import UUID

from sqlalchemy import DateTime, Index, String, Text, func, text
from sqlalchemy.dialects.postgresql import UUID as PgUUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.db.base import Base

if TYPE_CHECKING:
    from app.models.course import Course
    from app.models.learning_record import LearningRecord
    from app.models.memory import StudentMemory
    from app.models.profile import LearningPreference, StudentProfile


class User(Base):
    __tablename__ = "users"
    __table_args__ = (
        Index("idx_users_role", "role"),
        Index("idx_users_status", "status"),
    )

    id: Mapped[UUID] = mapped_column(
        PgUUID(as_uuid=True),
        primary_key=True,
        server_default=text("gen_random_uuid()"),
    )
    username: Mapped[str] = mapped_column(String(64), nullable=False, unique=True)
    email: Mapped[str | None] = mapped_column(String(128), unique=True)
    password_hash: Mapped[str] = mapped_column(String(255), nullable=False)
    role: Mapped[str] = mapped_column(
        String(32),
        nullable=False,
        server_default=text("'student'"),
    )
    status: Mapped[str] = mapped_column(
        String(32),
        nullable=False,
        server_default=text("'active'"),
    )
    avatar_url: Mapped[str | None] = mapped_column(Text)
    last_login_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        server_default=func.now(),
    )
    updated_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        server_default=func.now(),
    )

    courses: Mapped[list[Course]] = relationship(
        "Course",
        back_populates="owner",
        cascade="all, delete-orphan",
    )
    profile: Mapped[StudentProfile | None] = relationship(
        "StudentProfile",
        back_populates="user",
        cascade="all, delete-orphan",
        uselist=False,
    )
    learning_preferences: Mapped[list[LearningPreference]] = relationship(
        "LearningPreference",
        back_populates="user",
        cascade="all, delete-orphan",
    )
    learning_records: Mapped[list[LearningRecord]] = relationship(
        "LearningRecord",
        back_populates="user",
        cascade="all, delete-orphan",
    )
    memories: Mapped[list[StudentMemory]] = relationship(
        "StudentMemory",
        back_populates="user",
        cascade="all, delete-orphan",
    )
